# hello-rpi

./: .gitignore  CMakeLists.txt  README.md  hello-asound.cpp  hello-portaudio.cpp  main.cpp  rpi-toolchain.cmake  toolchain-locations-example.cmake  write-file.cpp
